# card-sorting-in-the-classroom

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: llm_solve.py  load_attempts.py  load_feedback.py  load_grades.py  load_questions.py  summary.rmd
src/attempts/: attempt.py
src/container/: runner.py
src/database/: orm.py  setup.py  tables.sql  utils.py
src/feedback/: feedback.py
src/grades/: grade.py  utils.py
src/llm/: completion.py  solver.py  types.py
src/moodle/: __init__.py  feedback.py  grades.py  responses.py  utils.py  xml.py
src/questions/: cardsort.py  question.py  refute.py  reverse_trace.py  utils.py
src/stats_utils/: utils.R
tests/: README.md  requirements.txt  test_parsing.py  test_questions.py  utils.py
tests/approvals/: test_card_sort.card_sort_grades_answers_for_ordered_sorts.Boolean Reasoning-Correct.approved.txt  test_card_sort.card_sort_grades_answers_for_ordered_sorts.Boolean Reasoning-Inadmissible Cards.approved.txt  test_card_sort.card_sort_grades_answers_for_ordered_sorts.Boolean Reasoning-Incorrect.approved.txt  test_card_sort.card_sort_grades_answers_for_ordered_sorts.Boolean Reasoning-Not Genuine.approved.txt  test_card_sort.card_sort_grades_answers_for_ordered_sorts.Boolean Reasoning-inadmissible Groups.approved.txt  test_card_sort.card_sort_grades_answers_for_unordered_sorts.Identify Exceptions-Correct.approved.txt  test_card_sort.card_sort_grades_answers_for_unordered_sorts.Identify Exceptions-Inadmissible Cards.approved.txt  test_questions.refute_questions_give_questions.approved.txt  (+14 more)
(+7 files in other folders)
